--- a/application/views/scripts/siripoia/editar.phtml
+++ b/application/views/scripts/siripoia/editar.phtml
@@ -166,7 +166,8 @@
             </div>
 
         </fieldset>
-    </form>   
+    </form>
+</div>
     <form>
         <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['sir_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
@@ -214,18 +215,18 @@
  <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
-            <div id="base">
+            <div>
                 <input class="responsivo" onclick="jsInsertEspecieCapturadaTipoVenda(this.form, '<?= $this->url(array("controller" => "siripoia", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['sir_id']?>')" type="button" value="Adicionar" />
-                <select class="responsivo" style="float:left;" name="SelectEspecie" class="espc">
+                <select class="responsivo-esp"  name="SelectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
                     <?php endforeach; ?>
                 </select>
-                <input class="responsivo" style="float:left;" type="text" name="quantidade" placeholder="Quantidade" size="10px">
-                <input class="responsivo" style="float:left;" type="text" name="peso" placeholder="Peso" size="10px">
-                <input class="responsivo" style="float:left;" type="text" name="precokg" placeholder="Preço por kg" size="10px">
-                <select name="tipoVenda" class="espc">
+                <input class="responsivo-esp"  type="text" name="quantidade" placeholder="Quantidade" size="10px">
+                <input class="responsivo-esp"  type="text" name="peso" placeholder="Peso" size="10px">
+                <input class="responsivo-esp"  type="text" name="precokg" placeholder="Preço por kg" size="10px">
+                <select name="tipoVenda" class="responsivo-esp">
                     <option value="" selected></option>
                      <?php foreach ($this->tipovenda as $key => $tipovenda): ?>
                         <option value="<?= $tipovenda['ttv_id']?>"><?= $tipovenda['ttv_tipovenda']; ?></option>
@@ -252,9 +253,9 @@
                         <tr id="itemEmbarcacoesRows">
                             <td name="inputEntrevista"> <?= $vEspecieCapturada['sir_id'] ?> </td>
                             <td name="inputEspecie" > <?= $vEspecieCapturada['esp_nome_comum'] ?> </td>
-                            <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'] ?> </td>
-                            <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'] ?> </td>
-                            <td name="inputPreco"> <?= $vEspecieCapturada['spc_preco'] ?> </td>
+                            <td name="inputQuantidade"> <?= $vEspecieCapturada['spc_quantidade'].' Unidades' ?> </td>
+                            <td name="inputPeso"> <?= $vEspecieCapturada['spc_peso_kg'].' kg' ?> </td>
+                            <td name="inputPreco"> <?= 'R$ '.$vEspecieCapturada['spc_preco'] ?> </td>
                             <td><input type="button" class="button-del" width="5%" onclick="jsDeleteEspecieCapturada(<?= $this->entrevista['sir_id'] ?>, '<?= $this->url(array("controller" => "siripoia", "action" => "deletespecie"), null, true) ?>', <?= $vEspecieCapturada['spc_sir_id'] ?>)"></td>
                         </tr>
                     <?php endforeach; ?>
@@ -411,5 +412,3 @@
 </form>
     <br/> <br/>
     <a href="<?= $this->url(array("controller" => "ficha-diaria", "action" => "editar","id" => $this->monitoramento['fd_id']), null, true) ?>" id="botao-ancora">Voltar à Ficha-Diária</a>
-    
-</div>
