--- a/application/views/scripts/emalhe/editar.phtml
+++ b/application/views/scripts/emalhe/editar.phtml
@@ -47,6 +47,7 @@
                 <div class="form-esq">
                     <label>Tipo de Barco:</label>
                     <select name="tipoBarco" />
+                    <option value=" " selected></option>
                     <?php
                     foreach ($this->tipoEmbarcacoes as $key => $tipoEmbarcacao):
                         ?>
