--- a/application/views/scripts/linha-fundo/editar.phtml
+++ b/application/views/scripts/linha-fundo/editar.phtml
@@ -35,6 +35,7 @@
                 <div class="form-esq">
                     <label>Barco:</label>
                     <select name="nomeBarco" placeholder="Nome do Barco" />
+                    <option value=" " selected></option>
                     <?php
                     foreach ($this->barcos as $key => $barco):
                         ?>
