--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -14,10 +14,10 @@
         echo $this->headLink() . "\n";
         echo $this->headScript() . "\n";
         ?>
-        
+        <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
         <title>
                 Programa de Monitoramento da Atividade Pesqueira
-            </title>
+        </title>
         <link rel="shortcut icon" href="img/rachy.png" />
     </head>
     <body>
