--- a/application/views/scripts/index-admin/index.phtml
+++ b/application/views/scripts/index-admin/index.phtml
@@ -2,28 +2,36 @@
 
 <div class="menu-relatorios">
     <a class="link-rel" href="<?= $this->url(array("controller" => "pescador", "action" => "relatorio"), null, true) ?>">
-        <img src="img/pescador-icon.jpg"/><br/>
+        <img src="img/pescador-icon.png"/><br/>
         <span class="legenda">Pescadores  </span>
     </a>
 </div>
 
 <div class="menu-relatorios">
     <a class="link-rel" href="<?= $this->url(array("controller" => "especie", "action" => "indexrelatorio"), null, true) ?>">
-        <img src="img/peixe-icon.jpg"/> <br/>
+        <img src="img/peixe-icon.png"/> <br/>
         <span class="legenda">Espécies</span>
     </a>
 </div>
 
 <div class="menu-relatorios">
     <a class="link-rel" href="#">
-        <img src="img/barco-icon.jpg"/><br/>
+        <img src="img/barco-icon.png"/><br/>
         <span class="legenda">Embarcações</span>
     </a>
 </div>
 
 <div class="menu-relatorios">
     <a class="link-rel" href="<?= $this->url(array("controller" => "relatorios", "action" => "index"), null, true) ?>">
-        <img src="img/entrevista-icon.jpg"/><br/>
+        <img src="img/entrevista-icon.png"/><br/>
         <span class="legenda">Entrevistas</span>
     </a>
 </div>
+
+<div class="menu-relatorios">
+    <a class="link-rel" href="<?= $this->url(array("controller" => "porto", "action" => "relatorioindex"), null, true) ?>">
+        <img src="img/porto-icon.png"/><br/>
+        <span class="legenda">Portos</span>
+    </a>
+</div>
+
