--- a/application/views/scripts/relatorios/pescadoresporto.phtml
+++ b/application/views/scripts/relatorios/pescadoresporto.phtml
@@ -14,7 +14,7 @@
         datasets: [
             {
                 label: "Pescadores",
-                fillColor: "rgba(151,187,205,0.2)",
+                fillColor: "rgba(151,187,205,1)",
                 strokeColor: "rgba(151,187,205,1)",
                 pointColor: "rgba(151,187,205,1)",
                 pointStrokeColor: "#fff",
@@ -27,7 +27,7 @@
     };
     window.onload = function(){
         var ctx = document.getElementById("GraficoLine").getContext("2d");
-        var LineChart = new Chart(ctx).Line(data, options);
+        var LineChart = new Chart(ctx).Bar(data, options);
     };
 </script>
 <div class="box-chart">
