--- a/application/views/scripts/porto/amendoeira.phtml
+++ b/application/views/scripts/porto/amendoeira.phtml
@@ -8,8 +8,14 @@
         scaleOverride: false
 
     };
-
-    var data = {
+    var optionsCaptura = {
+        responsive:true,
+        scaleOverride: true,
+	scaleStartValue: 0,
+	scaleSteps: 10,
+	scaleStepWidth: 1000
+    };
+    var datacaptura = {
         labels: <?= $this->arrayArtes ?>,
         datasets: [
             {
@@ -34,9 +40,46 @@
             }
         ]
     };
+    
+    var databarcos = {
+        labels: <?= $this->arrayArtes ?>,
+        datasets: [
+            {
+                label: "Quantidade",
+                fillColor: "rgba(151,187,205,.5)",
+                strokeColor: "rgba(151,187,205,1)",
+                pointColor: "rgba(151,187,205,1)",
+                pointStrokeColor: "#fff",
+                pointHighlightFill: "#fff",
+                pointHighlightStroke: "rgba(151,187,205,1)",
+                data: <?= $this->arrayCount ?>
+            }
+        ]
+    };
+    var datapescador = {
+        labels: <?= $this->arrayArtes ?>,
+        datasets: [
+            {
+                label: "Quantidade",
+                fillColor: "rgba(151,187,205,.5)",
+                strokeColor: "rgba(151,187,205,1)",
+                pointColor: "rgba(151,187,205,1)",
+                pointStrokeColor: "#fff",
+                pointHighlightFill: "#fff",
+                pointHighlightStroke: "rgba(151,187,205,1)",
+                data: <?= $this->arrayCountPescador ?>
+            }
+        ]
+    };
     window.onload = function(){
-        var ctx = document.getElementById("GraficoLine").getContext("2d");
-        var LineChart = new Chart(ctx).Bar(data, options);
+        var ctx = document.getElementById("Captura").getContext("2d");
+        var LineChart = new Chart(ctx).Bar(datacaptura, optionsCaptura);
+        
+        var id_barcos = document.getElementById("Barcos").getContext("2d");
+        var BarChart = new Chart(id_barcos).Bar(databarcos, options);
+        
+        var id_barcos = document.getElementById("Pescadores").getContext("2d");
+        var PescChart = new Chart(id_barcos).Bar(datapescador, options);
     };
 </script>
 
@@ -113,43 +156,277 @@
     <td><?= $captManzua['peso'].' kg' ?></td>
     </tr>
 <?php endforeach; ?>
-    <?php foreach ($this->capturaLinhaFundo as $key => $captLinhaFundo): ?>
+    <?php foreach ($this->capturaMergulho as $key => $captMergulho): ?>
     <tr>
-    <td>Pesca de Linha de Fundo</td>
-    <td><?= $captLinhaFundo['quant'].' unidades' ?></td>
-    <td><?= $captLinhaFundo['peso'].' kg' ?></td>
+    <td>Pesca de Mergulho</td>
+    <td><?= $captMergulho['quant'].' unidades' ?></td>
+    <td><?= $captMergulho['peso'].' kg' ?></td>
     </tr>
 <?php endforeach; ?>
-    <?php foreach ($this->capturaLinhaFundo as $key => $captLinhaFundo): ?>
+    <?php foreach ($this->capturaRatoeira as $key => $captRatoeira): ?>
     <tr>
-    <td>Pesca de Linha de Fundo</td>
-    <td><?= $captLinhaFundo['quant'].' unidades' ?></td>
-    <td><?= $captLinhaFundo['peso'].' kg' ?></td>
+    <td>Pesca de Ratoeira</td>
+    <td><?= $captRatoeira['quant'].' unidades' ?></td>
+    <td><?= $captRatoeira['peso'].' kg' ?></td>
     </tr>
 <?php endforeach; ?>
-    <?php foreach ($this->capturaLinhaFundo as $key => $captLinhaFundo): ?>
+    <?php foreach ($this->capturaSiripoia as $key => $captSiripoia): ?>
     <tr>
-    <td>Pesca de Linha de Fundo</td>
-    <td><?= $captLinhaFundo['quant'].' unidades' ?></td>
-    <td><?= $captLinhaFundo['peso'].' kg' ?></td>
+    <td>Pesca de Siripoia</td>
+    <td><?= $captSiripoia['quant'].' unidades' ?></td>
+    <td><?= $captSiripoia['peso'].' kg' ?></td>
     </tr>
 <?php endforeach; ?>
-    <?php foreach ($this->capturaLinhaFundo as $key => $captLinhaFundo): ?>
+    <?php foreach ($this->capturaTarrafa as $key => $captTarrafa): ?>
     <tr>
-    <td>Pesca de Linha de Fundo</td>
-    <td><?= $captLinhaFundo['quant'].' unidades' ?></td>
-    <td><?= $captLinhaFundo['peso'].' kg' ?></td>
+    <td>Pesca de Tarrafa</td>
+    <td><?= $captTarrafa['quant'].' unidades' ?></td>
+    <td><?= $captTarrafa['peso'].' kg' ?></td>
     </tr>
 <?php endforeach; ?>
-    <?php foreach ($this->capturaLinhaFundo as $key => $captLinhaFundo): ?>
+    <?php foreach ($this->capturaVaraPesca as $key => $captVaraPesca): ?>
     <tr>
-    <td>Pesca de Linha de Fundo</td>
-    <td><?= $captLinhaFundo['quant'].' unidades' ?></td>
-    <td><?= $captLinhaFundo['peso'].' kg' ?></td>
+    <td>Vara de Pesca</td>
+    <td><?= $captVaraPesca['quant'].' unidades' ?></td>
+    <td><?= $captVaraPesca['peso'].' kg' ?></td>
     </tr>
 <?php endforeach; ?>
 </table>
 <br/>
 <div class="box-chart">
-  <canvas id="GraficoLine" style="width:100%;"></canvas>
+  <canvas id="Captura" style="width:100%;"></canvas>
+</div>
+
+<br/>
+<br/>
+
+<table>
+    <legend>Barcos por Porto</legend>
+    <legend>Entre <?=$this->dataini ?> e <?=$this->datafim ?> </legend>
+    <tr>
+    <th>Arte de pesca</th>
+    <th>Quantidade Total</th>
+    
+</tr>
+<br/>
+<?php foreach ($this->barcosArrasto as $key => $barcosArrasto): ?>
+    <tr>
+    <td>Arrasto de Fundo</td>
+    <td><?= $barcosArrasto['count'].' barcos' ?></td>
+   
+    </tr>
+<?php endforeach; ?>
+<?php foreach ($this->barcosCalao as $key => $barcosCalao): ?>
+    <tr>
+    <td>Calão</td>
+    <td><?= $barcosCalao['count'].' barcos' ?></td>
+
+    </tr>
+<?php endforeach; ?>
+<?php foreach ($this->barcosColeta as $key => $barcosColeta): ?>
+    <tr>
+    <td>Coleta Manual</td>
+    <td><?= $barcosColeta['count'].' barcos' ?></td>
+
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->barcosEmalhe as $key => $barcosEmalhe): ?>
+    <tr>
+    <td>Emalhe</td>
+    <td><?= $barcosEmalhe['count'].' barcos' ?></td>
+
+    </tr>
+<?php endforeach; ?>
+
+<?php foreach ($this->barcosGrosseira as $key => $barcosGrosseira): ?>
+    <tr>
+    <td>Espinhel/Groseira</td>
+    <td><?= $barcosGrosseira['count'].' barcos' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+<?php foreach ($this->barcosJerere as $key => $barcosJerere): ?>
+    <tr>
+    <td>Jereré</td>
+    <td><?= $barcosJerere['count'].' barcos' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+<?php foreach ($this->barcosLinha as $key => $barcosLinha): ?>
+    <tr>
+    <td>Pesca de Linha</td>
+    <td><?= $barcosLinha['count'].' barcos' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+<?php foreach ($this->barcosLinhaFundo as $key => $barcosLinhaFundo): ?>
+    <tr>
+    <td>Pesca de Linha de Fundo</td>
+    <td><?= $barcosLinhaFundo['count'].' barcos' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->barcosManzua as $key => $barcosManzua): ?>
+    <tr>
+    <td>Pesca de Manzuá</td>
+    <td><?= $barcosManzua['count'].' barcos' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->barcosMergulho as $key => $barcosMergulho): ?>
+    <tr>
+    <td>Pesca de Mergulho</td>
+    <td><?= $barcosMergulho['count'].' barcos' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->barcosRatoeira as $key => $barcosRatoeira): ?>
+    <tr>
+    <td>Pesca de Ratoeira</td>
+    <td><?= $barcosRatoeira['count'].' barcos' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->barcosSiripoia as $key => $barcosSiripoia): ?>
+    <tr>
+    <td>Pesca de Siripoia</td>
+    <td><?= $barcosSiripoia['count'].' barcos' ?></td>
+   
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->barcosTarrafa as $key => $barcosTarrafa): ?>
+    <tr>
+    <td>Pesca de Tarrafa</td>
+    <td><?= $barcosTarrafa['count'].' barcos' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->barcosVaraPesca as $key => $barcosVaraPesca): ?>
+    <tr>
+    <td>Vara de Pesca</td>
+    <td><?= $barcosVaraPesca['count'].' barcos' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+</table>
+<br/>
+<div class="box-chart">
+  <canvas id="Barcos" style="width:100%;"></canvas>
+</div>
+
+<br/>
+<br/>
+
+<table>
+    <legend>Pescadores por Porto</legend>
+    <legend>Entre <?=$this->dataini ?> e <?=$this->datafim ?> </legend>
+    <tr>
+    <th>Arte de pesca</th>
+    <th>Quantidade Total</th>
+    
+</tr>
+<br/>
+<?php foreach ($this->pescadoresArrasto as $key => $pescadoresArrasto): ?>
+    <tr>
+    <td>Arrasto de Fundo</td>
+    <td><?= $pescadoresArrasto['count'].' pescadores' ?></td>
+   
+    </tr>
+<?php endforeach; ?>
+<?php foreach ($this->pescadoresCalao as $key => $pescadoresCalao): ?>
+    <tr>
+    <td>Calão</td>
+    <td><?= $pescadoresCalao['count'].' pescadores' ?></td>
+
+    </tr>
+<?php endforeach; ?>
+<?php foreach ($this->pescadoresColeta as $key => $pescadoresColeta): ?>
+    <tr>
+    <td>Coleta Manual</td>
+    <td><?= $pescadoresColeta['count'].' pescadores' ?></td>
+
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->pescadoresEmalhe as $key => $pescadoresEmalhe): ?>
+    <tr>
+    <td>Emalhe</td>
+    <td><?= $pescadoresEmalhe['count'].' pescadores' ?></td>
+
+    </tr>
+<?php endforeach; ?>
+
+<?php foreach ($this->pescadoresGrosseira as $key => $pescadoresGrosseira): ?>
+    <tr>
+    <td>Espinhel/Groseira</td>
+    <td><?= $pescadoresGrosseira['count'].' pescadores' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+<?php foreach ($this->pescadoresJerere as $key => $pescadoresJerere): ?>
+    <tr>
+    <td>Jereré</td>
+    <td><?= $pescadoresJerere['count'].' pescadores' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+<?php foreach ($this->pescadoresLinha as $key => $pescadoresLinha): ?>
+    <tr>
+    <td>Pesca de Linha</td>
+    <td><?= $pescadoresLinha['count'].' pescadores' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+<?php foreach ($this->pescadoresLinhaFundo as $key => $pescadoresLinhaFundo): ?>
+    <tr>
+    <td>Pesca de Linha de Fundo</td>
+    <td><?= $pescadoresLinhaFundo['count'].' pescadores' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->pescadoresManzua as $key => $pescadoresManzua): ?>
+    <tr>
+    <td>Pesca de Manzuá</td>
+    <td><?= $pescadoresManzua['count'].' pescadores' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->pescadoresMergulho as $key => $pescadoresMergulho): ?>
+    <tr>
+    <td>Pesca de Mergulho</td>
+    <td><?= $pescadoresMergulho['count'].' pescadores' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->pescadoresRatoeira as $key => $pescadoresRatoeira): ?>
+    <tr>
+    <td>Pesca de Ratoeira</td>
+    <td><?= $pescadoresRatoeira['count'].' pescadores' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->pescadoresSiripoia as $key => $pescadoresSiripoia): ?>
+    <tr>
+    <td>Pesca de Siripoia</td>
+    <td><?= $pescadoresSiripoia['count'].' pescadores' ?></td>
+   
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->pescadoresTarrafa as $key => $pescadoresTarrafa): ?>
+    <tr>
+    <td>Pesca de Tarrafa</td>
+    <td><?= $pescadoresTarrafa['count'].' pescadores' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+    <?php foreach ($this->pescadoresVaraPesca as $key => $pescadoresVaraPesca): ?>
+    <tr>
+    <td>Vara de Pesca</td>
+    <td><?= $pescadoresVaraPesca['count'].' pescadores' ?></td>
+    
+    </tr>
+<?php endforeach; ?>
+</table>
+<br/>
+<div class="box-chart">
+  <canvas id="Pescadores" style="width:100%;"></canvas>
 </div>
