--- a/application/views/scripts/ratoeira/editar.phtml
+++ b/application/views/scripts/ratoeira/editar.phtml
@@ -167,6 +167,7 @@
 
         </fieldset>
         </form>
+</div>
     <form>
         <input type="hidden" placeholder = "ID" name="id_entrevista"  value="<?= $this->entrevista['rat_id'] ?>"/><br />
         <input type="hidden" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
@@ -194,18 +195,18 @@
 <fieldset class="noEditable"><legend>Espécies Capturadas:</legend>
         <fieldset class="noEditable"><legend>Dados das Espécies Capturadas:</legend>
 
-            <div id="base">
+            <div >
                 <input class="responsivo" onclick="ajax_esp_capturada(this.form, '<?= $this->url(array("controller" => "ratoeira", "action" => "insertespeciecapturada"), null, true) ?>','<?=$this->entrevista['rat_id']?>','venda')" type="button" value="Adicionar" />
-                <select class="responsivo" style="float:left;" name="selectEspecie" class="espc">
+                <select class="responsivo-esp" style="float:left;" name="selectEspecie" class="espc">
                     <option value="" selected></option>
                     <?php foreach ($this->especies as $key => $especie): ?>
                         <option value="<?= $especie['esp_id']; ?>"><?= $especie['esp_nome_comum']; ?></option>
                     <?php endforeach; ?>
                 </select>
-                <input class="responsivo" style="float:left;" type="text" name="quantidade" placeholder="Quantidade" size="10px">
-                <input class="responsivo" style="float:left;" type="text" name="peso" placeholder="Peso" size="10px">
-                <input class="responsivo" style="float:left;" type="text" name="precokg" placeholder="Preço por kg" size="10px">
-                <select class="responsivo" name="tipoVenda" class="espc">
+                <input class="responsivo-esp" style="float:left;" type="text" name="quantidade" placeholder="Quantidade" size="10px">
+                <input class="responsivo-esp" style="float:left;" type="text" name="peso" placeholder="Peso" size="10px">
+                <input class="responsivo-esp" style="float:left;" type="text" name="precokg" placeholder="Preço por kg" size="10px">
+                <select class="responsivo-esp" name="tipoVenda" class="espc">
                     <option value="" selected></option>
                      <?php foreach ($this->tipovenda as $key => $tipovenda): ?>
                         <option value="<?= $tipovenda['ttv_id']?>"><?= $tipovenda['ttv_tipovenda']; ?></option>
@@ -369,5 +370,3 @@
 </form>  
     <br/> <br/>
     <a href="<?= $this->url(array("controller" => "ficha-diaria", "action" => "editar","id" => $this->monitoramento['fd_id']), null, true) ?>" id="botao-ancora">Voltar à Ficha-Diária</a>
-    
-</div>
