Entrevistas por Porto

--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -23,8 +23,8 @@
     <body>
         <div id="geral">
             <div id="topo">
-                <div id="topoLeft"></div>
-                <div id="topoRight"></div>
+                <div id="topoLeft"><img src="img/Rachycentronlogo.png"/></div>
+                <div id="topoRight"><img src="img/mpesca.png"/></div>
             </div>
             <div id="menu">
                 <ul>
