Correcoes Relatorios por Porto

--- a/application/views/scripts/porto/amendoeira.phtml
+++ b/application/views/scripts/porto/amendoeira.phtml
@@ -1,6 +1,6 @@
 <h2>Porto -> Amendoeira</h2>
 
-<script src="js/Chart.min.js"></script>
+<!--<script src="js/Chart.min.js"></script>
 
 <script type="text/javascript">
 
@@ -152,7 +152,7 @@
         var id_quant_capt = document.getElementById("QuantCaptura").getContext("2d");
         var QuantCaptChart = new Chart(id_quant_capt).Bar(dataquantcaptura, options);
     };
-</script>
+</script>-->
 
 <!--<script src="js/charts-box/Chart.js"></script>-->
 <!--<script type="text/javascript">
@@ -191,7 +191,7 @@
     }
 </script>-->
 
-<table>
+<!--<table>
     <legend>Captura Monitorada por Porto</legend>
     <legend>Entre <?=$this->dataini ?> e <?=$this->datafim ?> </legend>
     <tr>
@@ -642,4 +642,4 @@
   <canvas id="cpueArrasto" style="width:100%;"></canvas>
 </div>
 <br/>
-<br/>
+<br/>-->
