Relatorios das Entrevistas

--- a/application/views/scripts/porto/terminal.phtml
+++ b/application/views/scripts/porto/terminal.phtml
@@ -131,7 +131,7 @@
         var QuantPescChart = new Chart(id_quant_pesc).Bar(dataquantpescadores, options);
     };
 </script>-->
-<script src="js/charts-box/Chart.js"></script>  
+<!--<script src="js/charts-box/Chart.js"></script>  
 <script type="text/javascript">
         var optionsBox = {
     		
@@ -621,4 +621,4 @@
   <canvas id="cpueArrasto" height="450" width="1000"></canvas>
 </div>
 <br/>
-<br/>
+<br/>-->
